src/test/deca/codegen/valid/addition_mult_var_f.deca
// Description:
//    test addition multiple
//
// Resultats:
//    4.00000e+00
//
// Historique:
//    cree le 13/01/2017
{
float x = 0.0;
float y = 2;
x = x + 2 + y;
print(x);
}
